first pass at porting code

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 ################################
 ###### Core dependencies #######
 ################################
+
+git+https://github.com/google-research/t5x
