minor fixes and write readme

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@
 ###### Core dependencies #######
 ################################
 
-git+https://github.com/google-research/t5x
+git+https://github.com/google-research/t5x#egg=t5x
 promptsource
