--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 ################################
 ###### Core dependencies #######
 ################################
-
 git+https://github.com/google-research/t5x.git
 promptsource==0.2.2
+transformers==4.18.0
+# for caching only
+apache-beam==2.38.0
