--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 ################################
 ###### Core dependencies #######
 ################################
+
+git+https://github.com/google-research/t5x.git
+promptsource==0.2.2
