--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 ################################
 ###### Core dependencies #######
 ################################
+git+https://github.com/google-research/text-to-text-transfer-transformer.git
 git+https://github.com/google-research/t5x.git
 promptsource==0.2.2
 transformers==4.18.0
@@ -8,3 +9,4 @@ tensorflow==2.8.1 # 2.9 has tpu issues
 tensorflow-text==2.8.1
 # for caching only
 apache-beam==2.38.0
+git+https://github.com/allenai/catwalk.git
