--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,9 @@ updates:
   directory: "/"
   schedule:
     interval: "daily"
+  ignore:
+    - dependency-name: "tensorflow"
+    - dependency-name: "tensorflow-text"
   open-pull-requests-limit: 10
 - package-ecosystem: "github-actions"
   directory: "/"
