--- a/pytest.ini
+++ b/pytest.ini
@@ -4,4 +4,5 @@ python_classes = Test* *Test
 log_format = %(asctime)s - %(levelname)s - %(name)s - %(message)s
 log_level = DEBUG
 markers =
-filterwarnings =
+filterwarnings = 
+    ignore::DeprecationWarning
