--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ git+https://github.com/google-research/t5x.git
 promptsource
 transformers==4.20.1
 tensorflow==2.9.0 # 2.9 has tpu issues
+#tensorflow-macos==2.9.0
 tensorflow-text==2.9.0
 # for caching only
 apache-beam==2.40.0
