--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,12 @@ promptsource
 transformers==4.20.1
 tensorflow==2.9.0 # 2.9 has tpu issues
 tensorflow-text==2.9.0
-# for caching only
+# for caching only, see https://github.com/apache/beam/issues/21019
 apache-beam==2.40.0
+cachetools>=3.1.0,<5
+google-apitools>=0.5.31,<0.5.32
+google-auth>=1.18.0,<3
+google-auth-httplib2>=0.1.0,<0.2.0
+google-cloud-datastore>=1.8.0,<2
+google-cloud-pubsub>=2.1.0,<3
+google-cloud-pubsublite>=1.2.0,<2
