--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@
 t5 @ git+https://github.com/google-research/text-to-text-transfer-transformer.git
 git+https://github.com/google-research/t5x.git
 promptsource
-transformers==4.20.1
+transformers==4.21.2
 tensorflow==2.9.0 # 2.9 has tpu issues
 #tensorflow-macos==2.9.0
 tensorflow-text==2.9.0
 # for caching only
 apache-beam==2.40.0
+# for ni-int
+rouge-score
