--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ etils==0.9.0
 exceptiongroup==1.0.0
 filelock==3.0.12
 flatbuffers==22.10.26
-git+https://github.com/google/flax@05988d1e119b112273aa0a0828c33c742243d951#egg=flax
+flax @ git+https://github.com/google/flax@05988d1e119b112273aa0a0828c33c742243d951#egg=flax
 fonttools==4.38.0
 frozenlist==1.3.1
 fsspec==2022.10.0
