HyperTune, col-wise (#64)
* "layer_embedding_method = 'decoder'" replicates hypertune setup (full decoder in hypernet), use 'hypertune.gin' with it for more replication of pretraining.
* col-wise decomposition (reducing parameter cost)
* pinning dependencies so we don't have to worry about t5x updating.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,37 +71,25 @@ jobs:
           path: .venv
           key: ${{ env.CACHE_PREFIX }}-${{ env.WEEK_NUMBER }}-${{ runner.os }}-${{ env.RUNNER_ARCH }}-${{ env.PYTHON_VERSION }}-${{ hashFiles('requirements.txt') }}-${{ hashFiles('dev-requirements.txt') }}
           restore-keys: |
-            ${{ env.CACHE_PREFIX }}-${{ env.WEEK_NUMBER }}-${{ runner.os }}-${{ env.RUNNER_ARCH }}-${{ env.PYTHON_VERSION }}-
+            ${{ env.CACHE_PREFIX }}-${{ env.WEEK_NUMBER }}-${{ runner.os }}-${{ env.RUNNER_ARCH }}-${{ env.PYTHON_VERSION }}
 
       - name: Setup virtual environment (no cache hit)
         if: steps.virtualenv-cache.outputs.cache-hit != 'true'
         run: |
           test -d .venv || virtualenv -p $(which python) --copies --reset-app-data .venv
           . .venv/bin/activate
-          pip install -e .[dev]
-          pip install git+https://github.com/google-research/t5x.git@main#egg=t5x
-          # install promptsource, and fix the seqio dependency
-          pip install promptsource
-          pip uninstall -y t5
-          pip install git+https://github.com/google-research/text-to-text-transfer-transformer.git
-          # custom fixed seqio
-          pip uninstall -y seqio seqio-nightly
-          pip install git+https://github.com/hamishivi/seqio.git
-          pip install tensorflow==2.9.0
-          pip install tensorflow-text==2.9.0
-          echo "----- ALL DEPENDENCIES INSTALLED -----"
-          # next, we cache the tokenizers / HF splits used so we don't have to load them later.
-          # This can take ~15 minutes.
-          python3 -c "from transformers import AutoTokenizer; AutoTokenizer.from_pretrained('t5-base')"
-          python3 -c "from transformers import AutoTokenizer; AutoTokenizer.from_pretrained('roberta-base')"
-          python3 -c "from transformers import FlaxRobertaModel; FlaxRobertaModel.from_pretrained('hamishivi/fixed-roberta-base')"
-          python3 -c "from transformers import FlaxRobertaModel; FlaxRobertaModel.from_pretrained('hamishivi/fixed-distilroberta-base')"
+          pip install --no-deps -e .[dev]
+          pip install -r requirements.txt --no-deps
+          pip install -r dev-requirements.txt --no-deps
 
       - name: Setup virtual environment (cache hit)
         if: steps.virtualenv-cache.outputs.cache-hit == 'true'
         run: |
+          test -d .venv || virtualenv -p $(which python) --copies --reset-app-data .venv
           . .venv/bin/activate
           pip install --no-deps -e .[dev]
+          pip install -r requirements.txt --no-deps
+          pip install -r dev-requirements.txt --no-deps
 
       - name: Show environment info
         run: |
