--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,213 @@
 ################################
 ###### Core dependencies #######
 ################################
-t5 @ git+https://github.com/google-research/text-to-text-transfer-transformer.git
-git+https://github.com/google-research/t5x.git
-promptsource
-transformers==4.21.3
-tensorflow==2.9.0 # 2.9 has tpu issues
-#tensorflow-macos==2.9.0
-tensorflow-text==2.9.0
+absl-py==1.3.0
+aiohttp==3.8.3
+aiosignal==1.2.0
+altair==4.2.0
+appdirs==1.4.4
+astor==0.8.1
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==19.3.0
+Automat==0.8.0
+Babel==2.10.3
+backports.zoneinfo==0.2.1
+base58==2.1.1
+black==21.12b0
+blinker==1.4
+Brotli==1.0.9
+cached-property==1.5.2
+cachetools==4.2.2
+certifi==2020.12.5
+chardet==4.0.0
+charset-normalizer==2.1.1
+chex==0.1.5
+click==7.1.2
+clu @ git+https://github.com/google/CommonLoopUtils@95994cbf2f05f477e8a72ec47b8d0b48549d1684#egg=clu
+colorama==0.4.3
+commonmark==0.9.1
+configobj==5.0.6
+constantly==15.1.0
+contextlib2==21.6.0
+contourpy==1.0.6
+cryptography==2.8
+cycler==0.11.0
+Cython==0.29.23
+dataclasses==0.6
+datasets==2.6.1
+decorator==5.1.1
+dill==0.3.5.1
+distlib==0.3.1
+distro==1.4.0
+dm-tree==0.1.7
+editdistance==0.6.1
+entrypoints==0.3
+etils==0.9.0
+exceptiongroup==1.0.0
+filelock==3.0.12
+flatbuffers==22.10.26
+flax @ git+https://github.com/google/flax@05988d1e119b112273aa0a0828c33c742243d951#egg=flax
+fonttools==4.38.0
+frozenlist==1.3.1
+fsspec==2022.10.0
+future==0.18.2
+gast==0.4.0
+gin-config==0.5.0
+gitdb==4.0.9
+GitPython==3.1.29
+google-api-core==1.28.0
+google-api-python-client==1.8.0
+google-auth==1.30.1
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+googleapis-common-protos==1.53.0
+grpcio==1.38.0
+h5py==3.7.0
+httplib2==0.19.1
+huggingface-hub==0.10.1
+hyperlink==19.0.0
+idna==2.10
+importlib-metadata==1.5.0
+importlib-resources==5.10.0
+incremental==16.10.1
+inflate64==0.3.1
+iniconfig==1.1.1
+isort==5.8.0
+jax==0.3.23
+jaxlib==0.3.22
+Jinja2==2.10.1
+joblib==1.2.0
+jsonpatch==1.22
+jsonpointer==2.0
+jsonschema==3.2.0
+keras==2.10.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+keyring==18.0.1
+kiwisolver==1.4.4
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+libclang==14.0.6
+lxml==4.9.1
+Markdown==3.3.4
+MarkupSafe==1.1.0
+matplotlib==3.6.1
+mccabe==0.7.0
+mesh-tensorflow==0.1.21
+ml-collections==0.1.1
+mock==4.0.3
+more-itertools==4.2.0
+msgpack==1.0.4
+multidict==6.0.2
+multiprocess==0.70.13
+multivolumefile==0.2.3
+mypy-extensions==0.4.3
+netifaces==0.10.4
+nltk==3.7
+numpy==1.22.4
+oauth2client==4.1.3
+oauthlib==3.1.0
+opt-einsum==3.3.0
+optax==0.1.2
+orbax @ git+https://github.com/google/orbax@53a728befec4288e36a84e67232bb5aed368cb3b#egg=orbax
+packaging==20.9
+pandas==1.5.1
+pathspec==0.10.1
+pexpect==4.6.0
+Pillow==8.2.0
+platformdirs==2.5.2
+plotly==5.11.0
+pluggy==1.0.0
+portalocker==2.6.0
+promise==2.3
+promptsource==0.2.3
+protobuf==3.17.1
+psutil==5.9.3
+py7zr==0.20.0
+pyarrow==10.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pybcj==1.0.1
+pycryptodomex==3.15.0
+pydeck==0.8.0b4
+Pygments==2.13.0
+PyHamcrest==1.9.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyparsing==2.4.7
+pyppmd==0.18.3
+pyrsistent==0.15.5
+pyserial==3.4
+python-dateutil==2.8.2
+pytz==2021.1
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==5.4.1
+pyzstd==0.15.3
+regex==2022.9.13
+requests==2.25.1
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+responses==0.18.0
+rich==12.6.0
+rouge-score==0.1.2
+rsa==4.7.2
+sacrebleu==2.3.1
+scikit-learn==1.1.3
+scipy>=1.6.3
+SecretStorage==2.3.1
+sentencepiece==0.1.97
+seqio @ git+https://github.com/hamishivi/seqio.git@21e2f883437ba587c99b2f8331f948ca626f2878#egg=seqio
+service-identity==18.1.0
+simplejson==3.16.0
+six==1.16.0
+smmap==5.0.0
+ssh-import-id==5.10
+streamlit==0.82.0
+t5 @ git+https://github.com/google-research/text-to-text-transfer-transformer.git@733428af1c961e09ea0b7292ad9ac9e0e001f8a5#egg=t5
+t5x @ git+https://github.com/google-research/t5x@3282da46b4a7e46bc17b96cdb6673a4dd812a1b6#egg=t5x
+tabulate==0.9.0
+tenacity==8.1.0
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.10.0
+tensorflow-cpu==2.10.0
+tensorflow-datasets==4.7.0
+tensorflow-estimator==2.10.0
+tensorflow-hub==0.12.0
+tensorflow-io-gcs-filesystem==0.27.0
+tensorflow-metadata==1.10.0
+tensorflow-text==2.10.0
+tensorstore==0.1.27
+termcolor==1.1.0
+texttable==1.6.4
+threadpoolctl==3.1.0
+tokenizers==0.13.1
+toml==0.10.2
+tomli==1.2.3
+toolz==0.12.0
+torch==1.8.1
+torchvision==0.9.1
+tornado==6.2
+tqdm==4.64.1
+transformers==4.23.1
+Twisted==18.9.0
+typing-extensions==4.4.0
+uritemplate==3.0.1
+urllib3==1.26.4
+validators==0.20.0
+virtualenv==20.4.7
+wadllib==1.3.3
+watchdog==2.1.9
+Werkzeug==2.0.1
+wrapt==1.12.1
+xxhash==3.1.0
+yarl==1.8.1
+zipp==3.10.0
 # for caching only
-apache-beam==2.41.0
-# for ni-int
-rouge-score
+# apache-beam==2.41.0
